@@ -1,3 +1,9 @@
+2018-02-24  Bruno Haible  <bruno@clisp.org>
+
+	Fix compilation error in C++ mode with musl libc.
+	* spvw_mmap.d (mincore_pageinfo_t): Change to 'unsigned char' on all
+	Linux platforms.
+
 2018-02-19  Sam Steingold  <sds@gnu.org>
 
 	* constobj.d (lisp_implementation_version_built_string): No need
